--- a/app/src/main/res/layout/tolkbilag1_view.xml
+++ b/app/src/main/res/layout/tolkbilag1_view.xml
@@ -29,13 +29,14 @@
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/group_row"
+                android:enabled="false"
                 android:hint="Tolkebureauets Yder nr./EAN nr. *"
                 android:inputType="number"
                 android:padding="10dp"
                 android:textColor="#000000" />
 
             <EditText
-                android:id="@+id/tnavn"
+                android:id="@+id/tNavn"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_alignEnd="@+id/Seanydenr"
@@ -51,14 +52,14 @@
                 android:textColor="#000000" />
 
             <EditText
-                android:id="@+id/knavn"
+                android:id="@+id/kNavn"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_alignEnd="@+id/tnavn"
-                android:layout_alignLeft="@+id/tnavn"
-                android:layout_alignRight="@+id/tnavn"
-                android:layout_alignStart="@+id/tnavn"
-                android:layout_below="@+id/tnavn"
+                android:layout_alignEnd="@+id/tNavn"
+                android:layout_alignLeft="@+id/tNavn"
+                android:layout_alignRight="@+id/tNavn"
+                android:layout_alignStart="@+id/tNavn"
+                android:layout_below="@+id/tNavn"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/group_row"
                 android:hint="Klientens navn *"
@@ -70,11 +71,11 @@
                 android:id="@+id/kCpr"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_alignEnd="@+id/knavn"
-                android:layout_alignLeft="@+id/knavn"
-                android:layout_alignRight="@+id/knavn"
-                android:layout_alignStart="@+id/knavn"
-                android:layout_below="@+id/knavn"
+                android:layout_alignEnd="@+id/kNavn"
+                android:layout_alignLeft="@+id/kNavn"
+                android:layout_alignRight="@+id/kNavn"
+                android:layout_alignStart="@+id/kNavn"
+                android:layout_below="@+id/kNavn"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/group_row"
                 android:hint="Klientens CPR-nr *"
@@ -84,7 +85,7 @@
                 android:textColor="#000000" />
 
             <EditText
-                android:id="@+id/kadress"
+                android:id="@+id/kAdress"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_alignEnd="@+id/kCpr"
@@ -100,14 +101,14 @@
                 android:textColor="#000000" />
 
             <EditText
-                android:id="@+id/kpostnr"
+                android:id="@+id/kPostnr"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_alignEnd="@+id/kadress"
-                android:layout_alignLeft="@+id/kadress"
-                android:layout_alignRight="@+id/kadress"
-                android:layout_alignStart="@+id/kadress"
-                android:layout_below="@+id/kadress"
+                android:layout_alignEnd="@+id/kAdress"
+                android:layout_alignLeft="@+id/kAdress"
+                android:layout_alignRight="@+id/kAdress"
+                android:layout_alignStart="@+id/kAdress"
+                android:layout_below="@+id/kAdress"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/group_row"
                 android:hint="Post nr *"
@@ -117,14 +118,14 @@
                 android:textColor="#000000" />
 
             <EditText
-                android:id="@+id/kby"
+                android:id="@+id/kBy"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_alignEnd="@+id/kpostnr"
-                android:layout_alignLeft="@+id/kpostnr"
-                android:layout_alignRight="@+id/kpostnr"
-                android:layout_alignStart="@+id/kpostnr"
-                android:layout_below="@+id/kpostnr"
+                android:layout_alignEnd="@+id/kPostnr"
+                android:layout_alignLeft="@+id/kPostnr"
+                android:layout_alignRight="@+id/kPostnr"
+                android:layout_alignStart="@+id/kPostnr"
+                android:layout_below="@+id/kPostnr"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/group_row"
                 android:editable="false"
@@ -139,11 +140,11 @@
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/kby"
-                android:layout_alignLeft="@+id/kby"
-                android:layout_alignRight="@+id/kby"
-                android:layout_alignStart="@+id/kby"
-                android:layout_below="@+id/kby"
+                android:layout_alignEnd="@+id/kBy"
+                android:layout_alignLeft="@+id/kBy"
+                android:layout_alignRight="@+id/kBy"
+                android:layout_alignStart="@+id/kBy"
+                android:layout_below="@+id/kBy"
                 android:padding="10dp"
                 android:text="Næste"
                 android:textColor="#000000" />
