--- a/app/src/main/res/layout/tolkensunderskrift_view.xml
+++ b/app/src/main/res/layout/tolkensunderskrift_view.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Tolkensunderskrift_fragment">
+    tools:context="com.example.jiahua.regionbilagdesign.Fragmenter.Tolkensunderskrift_fragment">
 
 
     <RelativeLayout
