--- a/app/src/main/res/layout/tolkbilag1_view.xml
+++ b/app/src/main/res/layout/tolkbilag1_view.xml
@@ -2,17 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tolkebilag1_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:layout_height="match_parent">
 
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/next"
         android:layout_below="@+id/textView"
         android:layout_gravity="center_horizontal"
         android:layout_weight="1">
@@ -134,29 +130,26 @@
                 android:textColor="#000000" />
 
 
-            <Button
-                android:id="@+id/next"
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/kBy"
-                android:layout_alignLeft="@+id/kBy"
-                android:layout_alignRight="@+id/kBy"
-                android:layout_alignStart="@+id/kBy"
-                android:layout_below="@+id/kBy"
-                android:padding="10dp"
-                android:text="Næste"
-                android:textColor="#000000" />
-
         </RelativeLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/next"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/kanter"
+        android:padding="10dp"
+        android:text="Næste"
+        android:textColor="#000000" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:text="UDFYLDES AF TOLK"
         android:textColor="@android:color/black"
         android:textStyle="bold" />
