--- a/app/src/main/res/layout/tolkbilag3_view.xml
+++ b/app/src/main/res/layout/tolkbilag3_view.xml
@@ -9,10 +9,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/evaText1"
-        android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/evaText1"
-        android:layout_marginEnd="10dp"
-        android:layout_toEndOf="@+id/evaText1" />
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/evaText2" />
 
     <EditText
         android:id="@+id/evaText2"
@@ -30,8 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/evaText2"
-        android:layout_alignEnd="@+id/evaType1"
         android:layout_below="@+id/evaText1"
+        android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/evaText2" />
 
     <EditText
@@ -50,8 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/evaText3"
-        android:layout_alignEnd="@+id/evaType2"
         android:layout_below="@+id/evaType2"
+        android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/evaText2" />
 
     <EditText
@@ -95,9 +94,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:text="Tryk næste for at underskriver" />
+        android:background="@drawable/kanter"
+        android:text="Tryk næste for at underskriver"
+        android:textColor="#000000"
+        android:layout_alignEnd="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView"
