--- a/app/src/main/res/layout/tolkbilag1_view.xml
+++ b/app/src/main/res/layout/tolkbilag1_view.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <ScrollView
-        android:id="@+id/scrollView2"
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/next"
@@ -151,7 +151,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:text="UDFYLDES AF TOLK"
-        android:textColor="@android:color/black"
+        android:textColor="#000000"
         android:textStyle="bold" />
 
 </RelativeLayout>
