--- a/app/src/main/res/layout/tolkbilag3_view.xml
+++ b/app/src/main/res/layout/tolkbilag3_view.xml
@@ -9,8 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/evaText1"
-        android:layout_alignTop="@+id/evaText1"
         android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/evaText1"
         android:layout_toEndOf="@+id/evaText2" />
 
     <EditText
@@ -29,8 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/evaText2"
-        android:layout_below="@+id/evaText1"
         android:layout_alignParentEnd="true"
+        android:layout_below="@+id/evaText1"
         android:layout_toEndOf="@+id/evaText2" />
 
     <EditText
@@ -49,8 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/evaText3"
-        android:layout_below="@+id/evaType2"
         android:layout_alignParentEnd="true"
+        android:layout_below="@+id/evaType2"
         android:layout_toEndOf="@+id/evaText2" />
 
     <EditText
@@ -93,12 +93,12 @@
         android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/textView4"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:background="@drawable/kanter"
         android:text="Tryk næste for at underskriver"
-        android:textColor="#000000"
-        android:layout_alignEnd="@+id/textView4" />
+        android:textColor="#000000" />
 
     <TextView
         android:id="@+id/textView"
